SERVER-16495 Map Reduce Output to Collection Occasionally Kills the Server