src/mongo/db/auth/authz_manager_external_state_s.cpp
@@ -75,11 +75,16 @@ namespace mongo {
 
     Status AuthzManagerExternalStateMongos::getStoredAuthorizationVersion(
                                                 OperationContext* txn, int* outVersion) {
-        scoped_ptr<ScopedDbConnection> conn(getConnectionForAuthzCollection(
-                AuthorizationManager::usersCollectionNamespace));
-        Status status = auth::getRemoteStoredAuthorizationVersion(conn->get(), outVersion);
-        conn->done();
-        return status;
+        try {
+            scoped_ptr<ScopedDbConnection> conn(getConnectionForAuthzCollection(
+                    AuthorizationManager::usersCollectionNamespace));
+            Status status = auth::getRemoteStoredAuthorizationVersion(conn->get(), outVersion);
+            conn->done();
+            return status;
+        }
+        catch (const DBException& ex) {
+            return ex.toStatus();
+        }
     }
 
     Status AuthzManagerExternalStateMongos::getUserDescription(
